--- a/.github/workflows/auto_pull_request.yml
+++ b/.github/workflows/auto_pull_request.yml
@@ -1,6 +1,9 @@
-name: AutoPush
+name: AutoPR
 
-on: [push]
+on:
+  pull_request:
+    branch:
+      - main
 
 jobs:
   build:
@@ -17,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pre-commit
-    - name: Analysing the code with pre-commit
+        pip install pytest
+    - name: Run unit tests
       run: |
-        pre-commit run --all-files
+        pytest
